Update lists at 20250616-1801

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -110,6 +110,7 @@ allow 118.193.64.139;
 allow 118.194.231.50;
 allow 118.194.234.240;
 allow 119.28.139.55;
+allow 121.78.28.166;
 allow 123.253.35.32;
 allow 124.198.131.108;
 allow 124.198.131.223;
@@ -205,6 +206,7 @@ allow 177.93.140.66;
 allow 178.162.175.5;
 allow 178.17.170.144;
 allow 178.17.170.23;
+allow 178.17.170.43;
 allow 178.17.171.102;
 allow 178.17.174.14;
 allow 178.17.174.164;
@@ -238,7 +240,6 @@ allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
 allow 185.104.120.10;
-allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
 allow 185.107.57.64;
@@ -1217,6 +1218,7 @@ allow 2803:cd80:2000:10::db8f:5f60;
 allow 2a00:16b0:1:243::7012:3117;
 allow 2a00:16b0:1:243::7012:a500;
 allow 2a00:16b0:1:243::7012:e817;
+allow 2a00:1728:f:f:f:f:c03c:9898;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1226,6 +1228,7 @@ allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:68::1;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
+allow 2a00:1dc0:caff:c3::b65d;
 allow 2a00:4d80::1;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
@@ -1286,7 +1289,6 @@ allow 2a03:e600:100::68;
 allow 2a03:e600:100::69;
 allow 2a03:e600:100::70;
 allow 2a03:e600:100::71;
-allow 2a04:5200:5977:1::169;
 allow 2a04:52c0:101:46a::;
 allow 2a04:52c0:102:46e0::1;
 allow 2a04:52c0:103:412::1;
@@ -1303,7 +1305,6 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
@@ -1323,7 +1324,6 @@ allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
 allow 2a06:3000::10;
-allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
 allow 2a06:d380:0:103::63;
@@ -1823,7 +1823,6 @@ allow 46.30.188.218;
 allow 46.38.243.210;
 allow 50.7.40.39;
 allow 5.101.82.67;
-allow 5.101.84.151;
 allow 5.104.84.183;
 allow 5.104.86.6;
 allow 51.15.59.15;
@@ -1899,7 +1898,6 @@ allow 77.48.28.239;
 allow 77.81.247.72;
 allow 77.91.75.25;
 allow 78.142.18.219;
-allow 78.153.140.44;
 allow 79.133.57.64;
 allow 80.241.60.207;
 allow 80.67.167.81;
@@ -1921,7 +1919,6 @@ allow 82.29.153.76;
 allow 83.147.17.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.211.226.13;
@@ -1936,6 +1933,7 @@ allow 87.118.116.12;
 allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
+allow 87.120.254.132;
 allow 87.120.93.182;
 allow 88.80.20.86;
 allow 88.80.26.2;
