--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -110,6 +110,7 @@ deny 118.193.64.139;
 deny 118.194.231.50;
 deny 118.194.234.240;
 deny 119.28.139.55;
+deny 121.78.28.166;
 deny 123.253.35.32;
 deny 124.198.131.108;
 deny 124.198.131.223;
@@ -205,6 +206,7 @@ deny 177.93.140.66;
 deny 178.162.175.5;
 deny 178.17.170.144;
 deny 178.17.170.23;
+deny 178.17.170.43;
 deny 178.17.171.102;
 deny 178.17.174.14;
 deny 178.17.174.164;
@@ -238,7 +240,6 @@ deny 185.100.87.174;
 deny 185.100.87.41;
 deny 185.10.16.41;
 deny 185.104.120.10;
-deny 185.104.120.30;
 deny 185.104.120.40;
 deny 185.106.102.102;
 deny 185.107.57.64;
@@ -1217,6 +1218,7 @@ deny 2803:cd80:2000:10::db8f:5f60;
 deny 2a00:16b0:1:243::7012:3117;
 deny 2a00:16b0:1:243::7012:a500;
 deny 2a00:16b0:1:243::7012:e817;
+deny 2a00:1728:f:f:f:f:c03c:9898;
 deny 2a00:1b88:4::2;
 deny 2a00:1b88:4::4;
 deny 2a00:1dc0:caff:12c::4d3a;
@@ -1226,6 +1228,7 @@ deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:68::1;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:8b::24bd;
+deny 2a00:1dc0:caff:c3::b65d;
 deny 2a00:4d80::1;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
@@ -1286,7 +1289,6 @@ deny 2a03:e600:100::68;
 deny 2a03:e600:100::69;
 deny 2a03:e600:100::70;
 deny 2a03:e600:100::71;
-deny 2a04:5200:5977:1::169;
 deny 2a04:52c0:101:46a::;
 deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:412::1;
@@ -1303,7 +1305,6 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
-deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -1323,7 +1324,6 @@ deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
 deny 2a06:3000::10;
-deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
 deny 2a06:d380:0:103::63;
@@ -1823,7 +1823,6 @@ deny 46.30.188.218;
 deny 46.38.243.210;
 deny 50.7.40.39;
 deny 5.101.82.67;
-deny 5.101.84.151;
 deny 5.104.84.183;
 deny 5.104.86.6;
 deny 51.15.59.15;
@@ -1899,7 +1898,6 @@ deny 77.48.28.239;
 deny 77.81.247.72;
 deny 77.91.75.25;
 deny 78.142.18.219;
-deny 78.153.140.44;
 deny 79.133.57.64;
 deny 80.241.60.207;
 deny 80.67.167.81;
@@ -1921,7 +1919,6 @@ deny 82.29.153.76;
 deny 83.147.17.190;
 deny 83.217.9.73;
 deny 83.96.213.63;
-deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.19.182.20;
 deny 84.211.226.13;
@@ -1936,6 +1933,7 @@ deny 87.118.116.12;
 deny 87.118.116.90;
 deny 87.118.122.30;
 deny 87.118.122.51;
+deny 87.120.254.132;
 deny 87.120.93.182;
 deny 88.80.20.86;
 deny 88.80.26.2;
