--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -110,6 +110,7 @@ set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
 set_real_ip_from 118.194.234.240;
 set_real_ip_from 119.28.139.55;
+set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 124.198.131.108;
 set_real_ip_from 124.198.131.223;
@@ -205,6 +206,7 @@ set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.162.175.5;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
+set_real_ip_from 178.17.170.43;
 set_real_ip_from 178.17.171.102;
 set_real_ip_from 178.17.174.14;
 set_real_ip_from 178.17.174.164;
@@ -238,7 +240,6 @@ set_real_ip_from 185.100.87.174;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.104.120.10;
-set_real_ip_from 185.104.120.30;
 set_real_ip_from 185.104.120.40;
 set_real_ip_from 185.106.102.102;
 set_real_ip_from 185.107.57.64;
@@ -1217,6 +1218,7 @@ set_real_ip_from 2803:cd80:2000:10::db8f:5f60;
 set_real_ip_from 2a00:16b0:1:243::7012:3117;
 set_real_ip_from 2a00:16b0:1:243::7012:a500;
 set_real_ip_from 2a00:16b0:1:243::7012:e817;
+set_real_ip_from 2a00:1728:f:f:f:f:c03c:9898;
 set_real_ip_from 2a00:1b88:4::2;
 set_real_ip_from 2a00:1b88:4::4;
 set_real_ip_from 2a00:1dc0:caff:12c::4d3a;
@@ -1226,6 +1228,7 @@ set_real_ip_from 2a00:1dc0:caff:44::326d;
 set_real_ip_from 2a00:1dc0:caff:68::1;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
+set_real_ip_from 2a00:1dc0:caff:c3::b65d;
 set_real_ip_from 2a00:4d80::1;
 set_real_ip_from 2a00:74a0:e000:1003::114;
 set_real_ip_from 2a00:99a0:0:1000::2;
@@ -1286,7 +1289,6 @@ set_real_ip_from 2a03:e600:100::68;
 set_real_ip_from 2a03:e600:100::69;
 set_real_ip_from 2a03:e600:100::70;
 set_real_ip_from 2a03:e600:100::71;
-set_real_ip_from 2a04:5200:5977:1::169;
 set_real_ip_from 2a04:52c0:101:46a::;
 set_real_ip_from 2a04:52c0:102:46e0::1;
 set_real_ip_from 2a04:52c0:103:412::1;
@@ -1303,7 +1305,6 @@ set_real_ip_from 2a04:52c0:123:c6c3::1;
 set_real_ip_from 2a04:52c0:126:3ab8::1;
 set_real_ip_from 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 set_real_ip_from 2a04:52c0:130:896e::1;
-set_real_ip_from 2a04:9dc0:31::c0cc:4d;
 set_real_ip_from 2a05:541:110:20::1;
 set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
@@ -1323,7 +1324,6 @@ set_real_ip_from 2a06:1700:3:19::1;
 set_real_ip_from 2a06:1700:3:34::1;
 set_real_ip_from 2a06:1700:4:14::1;
 set_real_ip_from 2a06:3000::10;
-set_real_ip_from 2a06:3000::30;
 set_real_ip_from 2a06:3000::40;
 set_real_ip_from 2a06:d380:0:103::62;
 set_real_ip_from 2a06:d380:0:103::63;
@@ -1823,7 +1823,6 @@ set_real_ip_from 46.30.188.218;
 set_real_ip_from 46.38.243.210;
 set_real_ip_from 50.7.40.39;
 set_real_ip_from 5.101.82.67;
-set_real_ip_from 5.101.84.151;
 set_real_ip_from 5.104.84.183;
 set_real_ip_from 5.104.86.6;
 set_real_ip_from 51.15.59.15;
@@ -1899,7 +1898,6 @@ set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 77.91.75.25;
 set_real_ip_from 78.142.18.219;
-set_real_ip_from 78.153.140.44;
 set_real_ip_from 79.133.57.64;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
@@ -1921,7 +1919,6 @@ set_real_ip_from 82.29.153.76;
 set_real_ip_from 83.147.17.190;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
-set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.226.13;
@@ -1936,6 +1933,7 @@ set_real_ip_from 87.118.116.12;
 set_real_ip_from 87.118.116.90;
 set_real_ip_from 87.118.122.30;
 set_real_ip_from 87.118.122.51;
+set_real_ip_from 87.120.254.132;
 set_real_ip_from 87.120.93.182;
 set_real_ip_from 88.80.20.86;
 set_real_ip_from 88.80.26.2;
