--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -124,7 +124,6 @@ deny 128.14.224.10;
 deny 128.31.0.13;
 deny 130.193.10.21;
 deny 130.193.15.186;
-deny 13.126.29.181;
 deny 131.72.79.38;
 deny 136.244.111.163;
 deny 138.59.18.110;
@@ -581,7 +580,6 @@ deny 193.218.118.178;
 deny 193.218.118.182;
 deny 193.218.118.188;
 deny 193.218.118.89;
-deny 193.218.118.91;
 deny 193.237.221.228;
 deny 193.239.232.102;
 deny 193.26.115.140;
@@ -1293,6 +1291,7 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
+deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
@@ -1557,7 +1556,6 @@ deny 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 deny 2a0e:97c0:3e3:a0e::1;
 deny 2a0e:97c0:3e3:b6::1;
 deny 2a0e:97c0:3ea:882::1;
-deny 2a0e:97c0:470::28;
 deny 2a0e:97c0:470::30;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
@@ -1591,7 +1589,6 @@ deny 2a0f:e586:f:f::182;
 deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:23ae:4067:bed4:a129;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
-deny 2a0f:e586:f:f:b190:21e6:40ba:73e1;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
 deny 2a0f:e586:f:f:baa4:d491:90be:dca5;
 deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
@@ -1710,6 +1707,7 @@ deny 45.13.225.69;
 deny 45.13.225.78;
 deny 45.133.74.53;
 deny 45.134.225.36;
+deny 45.135.180.12;
 deny 45.137.70.158;
 deny 45.138.16.107;
 deny 45.138.16.113;
@@ -1835,6 +1833,7 @@ deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.253.247.27;
 deny 5.255.100.219;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.101.131;
 deny 5.255.103.235;
@@ -1884,7 +1883,6 @@ deny 66.94.111.228;
 deny 67.219.109.141;
 deny 71.19.144.106;
 deny 72.14.179.10;
-deny 72.211.49.235;
 deny 72.235.129.116;
 deny 72.5.43.62;
 deny 74.82.47.194;
@@ -1968,13 +1966,13 @@ deny 91.219.236.91;
 deny 91.219.237.39;
 deny 91.92.109.126;
 deny 91.92.109.43;
+deny 92.113.144.149;
 deny 92.243.24.163;
 deny 92.246.84.133;
 deny 93.113.25.239;
 deny 93.123.109.116;
 deny 93.123.12.112;
 deny 93.185.165.211;
-deny 93.90.74.28;
 deny 93.90.74.29;
 deny 93.95.227.37;
 deny 93.95.228.125;
