Update lists at 20250617-0601

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -66,7 +66,6 @@ allow 107.189.4.12;
 allow 107.189.4.209;
 allow 107.189.5.121;
 allow 107.189.5.188;
-allow 107.189.5.249;
 allow 107.189.5.7;
 allow 107.189.6.124;
 allow 107.189.7.141;
@@ -231,14 +230,12 @@ allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
-allow 180.150.226.99;
 allow 185.100.85.132;
 allow 185.100.87.136;
 allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -459,6 +456,9 @@ allow 185.241.208.92;
 allow 185.244.192.175;
 allow 185.244.192.184;
 allow 185.246.128.161;
+allow 185.246.188.115;
+allow 185.246.188.116;
+allow 185.246.188.117;
 allow 185.246.188.149;
 allow 185.246.188.73;
 allow 185.246.188.74;
@@ -928,7 +928,6 @@ allow 23.137.253.27;
 allow 23.137.254.137;
 allow 23.151.8.8;
 allow 23.155.8.104;
-allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -1001,7 +1000,6 @@ allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:9fef::1;
 allow 2602:fc24:12:a679::1;
-allow 2602:fc24:18:a378::1;
 allow 2602:fc24:18:f38f::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
@@ -1031,7 +1029,6 @@ allow 2605:6400:30:ed0c:b477:4972:756a:2f42;
 allow 2605:6400:30:edc3::34;
 allow 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 allow 2605:6400:30:efba:dead::;
-allow 2605:6400:30:f04d:2605:6400:30:30;
 allow 2605:6400:30:f05d:c272:5525:72b1:e64c;
 allow 2605:6400:30:f060:be62:b857:b818:9144;
 allow 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -1320,7 +1317,6 @@ allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1556,6 +1552,7 @@ allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
+allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1599,7 +1596,6 @@ allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:156b::;
 allow 2a11:6100:0:1e6a::1;
-allow 2a12:6fc2:8000::641;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:223;
 allow 2a12:a800:11:1:124:198:131:253;
@@ -1921,7 +1917,6 @@ allow 84.211.226.13;
 allow 84.239.46.144;
 allow 84.38.130.50;
 allow 85.239.41.130;
-allow 85.90.196.47;
 allow 85.93.218.204;
 allow 86.54.28.49;
 allow 87.118.110.27;
@@ -1966,13 +1961,13 @@ allow 91.219.236.91;
 allow 91.219.237.39;
 allow 91.92.109.126;
 allow 91.92.109.43;
-allow 92.113.144.149;
 allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.113.25.239;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
+allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
