Update lists at 20250617-0901

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -126,7 +126,6 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
-deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:69ed::1;
 deny 2602:f6f6:2:ad5c::1;
@@ -146,6 +145,7 @@ deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
 deny 2605:6400:10:1008:1111:1111:1111:1111;
 deny 2605:6400:10:1362::2;
+deny 2605:6400:10:1ab:2605:6400:10:1ab;
 deny 2605:6400:10:44f::1;
 deny 2605:6400:10:58f:8768:8283:1a62:bdc6;
 deny 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -425,7 +425,6 @@ deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:4735::1;
 deny 2a04:52c0:104:ad97::1;
 deny 2a04:52c0:105:78fc::1;
-deny 2a04:52c0:105:d7eb::1;
 deny 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 deny 2a04:52c0:106:d219::1;
 deny 2a04:52c0:108:a34f::1;
