--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -631,6 +631,7 @@ allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.51.189;
+allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.74;
 allow 198.98.61.60;
@@ -882,7 +883,6 @@ allow 209.141.54.218;
 allow 209.141.55.26;
 allow 209.141.58.254;
 allow 209.141.61.52;
-allow 209.182.214.58;
 allow 212.21.66.6;
 allow 212.38.189.186;
 allow 212.69.167.80;
@@ -927,7 +927,6 @@ allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.137;
 allow 23.151.8.8;
-allow 23.155.8.104;
 allow 23.184.48.78;
 allow 23.191.200.10;
 allow 23.191.200.11;
@@ -988,7 +987,6 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
-allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:69ed::1;
 allow 2602:f6f6:2:ad5c::1;
@@ -1008,6 +1006,7 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1362::2;
+allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1288,7 +1287,6 @@ allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1730,6 +1728,7 @@ allow 45.141.215.17;
 allow 45.141.215.19;
 allow 45.141.215.200;
 allow 45.141.215.21;
+allow 45.141.215.25;
 allow 45.141.215.28;
 allow 45.141.215.40;
 allow 45.141.215.56;
@@ -1829,7 +1828,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
