--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -5,7 +5,6 @@ set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
 set_real_ip_from 2001:1b60:3:221:701:102:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:103:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:106:0:1;
-set_real_ip_from 2001:1c02:1a18:5700:7b6:bf5f:7e8:70d9;
 set_real_ip_from 2001:41d0:1008:20d1::1;
 set_real_ip_from 2001:41d0:2:9161::1;
 set_real_ip_from 2001:41d0:304:200::3348;
@@ -146,7 +145,6 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
-set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -168,7 +166,6 @@ set_real_ip_from 2605:6400:30:ed0c:b477:4972:756a:2f42;
 set_real_ip_from 2605:6400:30:edc3::34;
 set_real_ip_from 2605:6400:30:ef7a:391a:8c71:a2f1:9506;
 set_real_ip_from 2605:6400:30:efba:dead::;
-set_real_ip_from 2605:6400:30:f04d:2605:6400:30:30;
 set_real_ip_from 2605:6400:30:f05d:c272:5525:72b1:e64c;
 set_real_ip_from 2605:6400:30:f060:be62:b857:b818:9144;
 set_real_ip_from 2605:6400:30:f08c:45b7:4a99:a154:694e;
@@ -374,6 +371,7 @@ set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e01::f03c:95ff:fe52:c6f8;
+set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
 set_real_ip_from 2a02:4780:2d:ea47::1;
