--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -264,6 +264,7 @@ allow 185.129.61.9;
 allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.130.47.58;
+allow 185.132.53.250;
 allow 185.132.53.6;
 allow 185.150.28.13;
 allow 185.154.110.142;
@@ -470,7 +471,6 @@ allow 185.246.189.99;
 allow 185.246.84.179;
 allow 185.247.184.105;
 allow 185.247.184.33;
-allow 185.247.226.175;
 allow 185.247.226.95;
 allow 185.252.232.218;
 allow 185.254.196.141;
@@ -602,6 +602,7 @@ allow 194.233.174.56;
 allow 194.26.192.77;
 allow 194.53.137.156;
 allow 194.87.55.98;
+allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.47.238.176;
@@ -633,6 +634,7 @@ allow 198.98.48.33;
 allow 198.98.48.35;
 allow 198.98.50.199;
 allow 198.98.51.189;
+allow 198.98.51.249;
 allow 198.98.57.151;
 allow 198.98.57.74;
 allow 198.98.61.60;
@@ -884,6 +886,7 @@ allow 209.141.55.26;
 allow 209.141.58.254;
 allow 209.141.61.52;
 allow 212.21.66.6;
+allow 212.34.142.89;
 allow 212.38.189.186;
 allow 212.69.167.80;
 allow 212.73.134.204;
@@ -1007,6 +1010,7 @@ allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
 allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1362::2;
+allow 2605:6400:10:1ab:2605:6400:10:1ab;
 allow 2605:6400:10:44f::1;
 allow 2605:6400:10:58f:8768:8283:1a62:bdc6;
 allow 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1312,7 +1316,6 @@ allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
-allow 2a06:1700:2:148::8493:bcd8;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
@@ -1331,7 +1334,6 @@ allow 2a09:61c0::21;
 allow 2a09:61c0::22;
 allow 2a09:61c0::beef;
 allow 2a09:b280:fe01:61::a;
-allow 2a0a:3840:8078:28:0:504e:1c99:1337;
 allow 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
@@ -1552,7 +1554,6 @@ allow 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 allow 2a0e:97c0:3e3:a0e::1;
 allow 2a0e:97c0:3e3:b6::1;
 allow 2a0e:97c0:3ea:882::1;
-allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
@@ -1592,6 +1593,7 @@ allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
+allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a11:6100:0:1467::;
 allow 2a11:6100:0:156b::;
 allow 2a11:6100:0:1e6a::1;
@@ -1832,6 +1834,7 @@ allow 5.181.80.107;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.109;
 allow 5.255.100.219;
 allow 5.255.101.10;
 allow 5.255.101.131;
@@ -1895,7 +1898,6 @@ allow 79.133.57.64;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
-allow 80.78.28.153;
 allow 80.82.78.14;
 allow 80.94.92.106;
 allow 80.94.92.92;
@@ -1961,7 +1963,6 @@ allow 91.208.75.4;
 allow 91.219.236.101;
 allow 91.219.236.91;
 allow 91.219.237.39;
-allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
 allow 92.246.84.133;
@@ -1969,7 +1970,6 @@ allow 93.113.25.239;
 allow 93.123.109.116;
 allow 93.123.12.112;
 allow 93.185.165.211;
-allow 93.90.74.28;
 allow 93.90.74.29;
 allow 93.95.227.37;
 allow 93.95.228.125;
