--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -85,7 +85,6 @@ allow 108.59.12.3;
 allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
-allow 109.228.160.190;
 allow 109.69.67.17;
 allow 109.70.100.1;
 allow 109.70.100.2;
@@ -106,7 +105,6 @@ allow 109.71.252.97;
 allow 113.20.31.38;
 allow 114.172.205.8;
 allow 114.35.245.150;
-allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 118.194.234.240;
@@ -161,7 +159,6 @@ allow 162.216.18.62;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
-allow 165.154.48.221;
 allow 165.154.59.197;
 allow 165.73.242.163;
 allow 166.70.207.2;
@@ -193,6 +190,7 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.65.148.133;
 allow 176.65.148.3;
+allow 176.65.149.100;
 allow 176.65.149.105;
 allow 176.65.149.84;
 allow 176.65.149.87;
@@ -235,7 +233,6 @@ allow 185.100.87.166;
 allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
-allow 185.104.120.10;
 allow 185.104.120.30;
 allow 185.104.120.40;
 allow 185.106.102.102;
@@ -749,7 +746,6 @@ allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:ac8:22:43::20e5:a7d7;
 allow 2001:b011:4006:7826::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -1305,6 +1301,7 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
+allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
@@ -1316,7 +1313,6 @@ allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
-allow 2a06:3000::10;
 allow 2a06:3000::30;
 allow 2a06:3000::40;
 allow 2a06:d380:0:103::62;
@@ -1741,6 +1737,7 @@ allow 45.141.215.56;
 allow 45.141.215.61;
 allow 45.141.215.62;
 allow 45.141.215.63;
+allow 45.141.215.76;
 allow 45.141.215.80;
 allow 45.141.215.88;
 allow 45.141.215.90;
@@ -1822,6 +1819,7 @@ allow 46.30.188.218;
 allow 46.38.243.210;
 allow 50.7.40.39;
 allow 5.101.82.67;
+allow 5.101.84.151;
 allow 5.104.84.183;
 allow 5.104.86.6;
 allow 51.15.59.15;
@@ -1935,6 +1933,7 @@ allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
 allow 88.80.26.4;
+allow 89.110.95.200;
 allow 89.147.108.90;
 allow 89.147.110.118;
 allow 89.147.110.154;
