--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -15,7 +15,6 @@ deny 2001:41d0:601:1100::71bb;
 deny 2001:41d0:700:10a2::;
 deny 2001:41d0:701:1000::5196;
 deny 2001:41d0:701:1100::57d3;
-deny 2001:41d0:805:d300::2b19:1929;
 deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
@@ -432,6 +431,7 @@ deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 deny 2a04:52c0:130:896e::1;
+deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
 deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
@@ -449,6 +449,7 @@ deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
+deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
