--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -114,6 +114,7 @@ deny 119.28.139.55;
 deny 121.78.28.166;
 deny 123.253.35.32;
 deny 124.198.131.108;
+deny 124.198.131.223;
 deny 124.198.131.253;
 deny 124.198.132.172;
 deny 124.198.132.237;
@@ -241,7 +242,6 @@ deny 185.100.87.136;
 deny 185.100.87.174;
 deny 185.100.87.41;
 deny 185.10.16.41;
-deny 185.104.120.10;
 deny 185.104.120.30;
 deny 185.104.120.40;
 deny 185.106.102.102;
@@ -283,6 +283,22 @@ deny 185.195.71.244;
 deny 185.207.107.130;
 deny 185.207.107.216;
 deny 185.217.199.129;
+deny 185.220.100.240;
+deny 185.220.100.241;
+deny 185.220.100.242;
+deny 185.220.100.243;
+deny 185.220.100.244;
+deny 185.220.100.245;
+deny 185.220.100.246;
+deny 185.220.100.247;
+deny 185.220.100.248;
+deny 185.220.100.249;
+deny 185.220.100.250;
+deny 185.220.100.251;
+deny 185.220.100.252;
+deny 185.220.100.253;
+deny 185.220.100.254;
+deny 185.220.100.255;
 deny 185.220.101.0;
 deny 185.220.101.1;
 deny 185.220.101.10;
@@ -569,7 +585,6 @@ deny 193.218.118.160;
 deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
-deny 193.218.118.188;
 deny 193.218.118.89;
 deny 193.237.221.228;
 deny 193.239.232.102;
@@ -1300,7 +1315,6 @@ deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
-deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -1316,6 +1330,22 @@ deny 2a09:61c0::22;
 deny 2a09:61c0::beef;
 deny 2a09:b280:fe01:61::a;
 deny 2a0a:4cc0:c0:130c:14c3:a0ff:fe24:7692;
+deny 2a0b:f4c0:16c:10::1;
+deny 2a0b:f4c0:16c:1::1;
+deny 2a0b:f4c0:16c:11::1;
+deny 2a0b:f4c0:16c:12::1;
+deny 2a0b:f4c0:16c:13::1;
+deny 2a0b:f4c0:16c:14::1;
+deny 2a0b:f4c0:16c:15::1;
+deny 2a0b:f4c0:16c:16::1;
+deny 2a0b:f4c0:16c:2::1;
+deny 2a0b:f4c0:16c:3::1;
+deny 2a0b:f4c0:16c:4::1;
+deny 2a0b:f4c0:16c:5::1;
+deny 2a0b:f4c0:16c:6::1;
+deny 2a0b:f4c0:16c:7::1;
+deny 2a0b:f4c0:16c:8::1;
+deny 2a0b:f4c0:16c:9::1;
 deny 2a0b:f4c2::;
 deny 2a0b:f4c2::1;
 deny 2a0b:f4c2::10;
@@ -1547,7 +1577,6 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::182;
-deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:23ae:4067:bed4:a129;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
@@ -1561,6 +1590,7 @@ deny 2a11:6100:0:1467::;
 deny 2a11:6100:0:156b::;
 deny 2a11:6100:0:1e6a::1;
 deny 2a12:a800:11:1:124:198:131:108;
+deny 2a12:a800:11:1:124:198:131:223;
 deny 2a12:a800:11:1:124:198:131:253;
 deny 2a12:a800:11:1:124:198:132:172;
 deny 2a12:a800:11:1:124:198:132:237;
