--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -242,6 +242,7 @@ deny 185.100.87.136;
 deny 185.100.87.174;
 deny 185.100.87.41;
 deny 185.10.16.41;
+deny 185.104.120.10;
 deny 185.104.120.30;
 deny 185.104.120.40;
 deny 185.106.102.102;
@@ -268,6 +269,7 @@ deny 185.129.62.62;
 deny 185.129.62.63;
 deny 185.130.47.58;
 deny 185.132.53.6;
+deny 185.14.31.113;
 deny 185.150.28.13;
 deny 185.154.110.142;
 deny 185.154.110.17;
@@ -585,6 +587,7 @@ deny 193.218.118.160;
 deny 193.218.118.173;
 deny 193.218.118.178;
 deny 193.218.118.182;
+deny 193.218.118.188;
 deny 193.218.118.89;
 deny 193.237.221.228;
 deny 193.239.232.102;
@@ -1315,6 +1318,7 @@ deny 2a06:1700:2:148::8493:bcd8;
 deny 2a06:1700:3:19::1;
 deny 2a06:1700:3:34::1;
 deny 2a06:1700:4:14::1;
+deny 2a06:3000::10;
 deny 2a06:3000::30;
 deny 2a06:3000::40;
 deny 2a06:d380:0:103::62;
@@ -1577,6 +1581,7 @@ deny 2a0f:df00:0:255::204;
 deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a0f:e586:f:f::182;
+deny 2a0f:e586:f:f::188;
 deny 2a0f:e586:f:f:23ae:4067:bed4:a129;
 deny 2a0f:e586:f:f:a052:2166:bef9:a432;
 deny 2a0f:e586:f:f:b1ac:d060:1ef8:40de;
@@ -1857,6 +1862,7 @@ deny 5.45.104.176;
 deny 5.45.98.162;
 deny 57.128.220.107;
 deny 57.129.91.235;
+deny 5.8.18.46;
 deny 5.8.18.99;
 deny 62.171.137.169;
 deny 62.182.84.146;
